--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Wlecome to my Website!</h1>
+        <h2>Another user changed content</h2>
         Hello, world!
     </body>
 </html>
