saving merge conflict for 2nd time

--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Wlecome to my Website!!</h1>
-=======
-        <h1 style="color:blue;">Welcome to my Website!</h1>
->>>>>>> 48a72437e790a91ddbfdfaed81b3cf33d95dc928
+        <h1 style="color:blue;">Welcome to my Website!!</h1>
         <h2>Another user changed content</h2>
         Hello, world!
     </body>
